# cookiecutter-pypackage-minimal

./: README.md  cookiecutter.json
{{cookiecutter._package_name}}/: setup.cfg
{{cookiecutter._package_name}}/.github/workflows/: release_flow.yml
{{cookiecutter.package_name}}/: .gitignore  .pre-commit-config.yaml  README.MD  requirements.txt  setup.cfg  tox.ini
{{cookiecutter.package_name}}/.github/workflows/: lint-test.yml
