[metadata]
name = {{ cookiecutter.package_name }}
version = file: version.txt
author = {{ cookiecutter.author_name }}
author_email = {{ cookiecutter.author_email }}
description = {{ cookiecutter.package_description }}
long_description = file: README.MD
long_description_content_type = text/markdown
url = {{ cookiecutter.package_url }}
classifiers =
    Programming Language :: Python :: {{ cookiecutter.python_version }}
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license = MIT
license_file = LICENSE


[options]
package_dir =
    = src
packages = find:
python_requires = >={{ cookiecutter.python_version }}
install_requires =

[options.packages.find]
where = src